Update admin dashboard and api routes
